# uefi-rust

./: Cargo.toml  run_uefi.sh
.cargo/: config.toml
esp/efi/boot/: bootx64.efi
src/: main.rs
