[package]
name = "uefi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
uefi = { version = "0.28.0", features = ["logger", "panic_handler", "global_allocator", "alloc", "qemu"] }

[package.metadata.cargo-run-uefi]
runner = "./run_uefi.sh"